--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-* 
-body{color: darkred;
-    box-sizing: border-box;
-    padding: 0;
+body {color: darkred;
+    box-sizing: content-box;
+    width: 100%;
+    height: auto;
+    width: 100%;
+    padding: 2;
     margin: 0;
 }
 
@@ -26,6 +28,7 @@ header h1 .seo {
 }
 
 header div {
+    width: 200;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -115,10 +118,7 @@ section {
     color: #ffffff;
 }
 
-
-
-
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -127,47 +127,12 @@ section {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2  {
     margin-bottom: 20px;
     font-size: 36px;
 }
