--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-body {color: darkred;
-    box-sizing: content-box;
-    width: 100%;
-    height: auto;
-    width: 100%;
-    padding: 2;
+/* Style applies to everything */
+* {
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
 }
 
+/* Style applies to body */
 body {
-    background-color: darkblue;
+    background-color: #d9dcd6;
 }
 
+/* Style applies to header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -21,14 +21,11 @@ header {
 header h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
-    width: 200;
+/* Style applies to navigation menu */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -36,11 +33,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,28 +47,44 @@ a {
     text-decoration: none;
 }
 
+/* Style applies to all p elements */
 p {
     font-size: 16px;
 }
-aside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
 
-}
-/*Controls background*/
-.hero {
-    height: 800px;
-    width: 100%;
+/* Style applies to figure element */
+figure {
+    height: 30%;
+    width: 15%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* Style applies to main element */
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+section img {
+    max-height: 200px;
+}
+
+section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .float-left {
@@ -84,13 +97,8 @@ aside {
     margin-left: 25px;
 }
 
-section {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-/*Control benefit section*/
-.benefits {
+/* Style applies to article semantic elements */
+article {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -100,50 +108,32 @@ section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/*consolidized*/
-.benefit-lead, .benefit-brand, .benefit-cost {
+
+/* Style applies to aside semantic elements */
+aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost {
+aside h3 {
     margin-bottom: 10px;
-    color: #ffffff;
+    text-align: center;
 }
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+aside img {
     display: block;
-    margin-bottom: 10px auto ;
+    margin: 10px auto;
     max-width: 150px;
-    color: #ffffff;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
-    max-height: 200px;
-}
-
-
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2  {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+/* Style applies to footer semantic elements */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
